# nilAI

./: .env.ci  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGESUMMARY.md  CODESTYLE.md  CONTRIBUTING.md  MIGRATION.md  Makefile  PLAN.md  QUERY_LOG_DEPENDENCY_MIGRATION.md  README.md  SECURITY.md  changes.patch  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.testnet.prod.yml  docker-compose.testnet.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/scripts/: update_version.py  update_version_from_release.py  wait_for_ci_services.sh
.github/workflows/: cicd.yml  pypi-publish.yml  test-pypi-publish.yml
caddy/: Caddyfile.http
clients/nilai-py/: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
clients/nilai-py/examples/: 0-api_key_mode.py  1-delegation_token_mode.py  2-streaming_mode.py  3-advanced_streaming.py  4-concurrent-streaming.py  5-nildb-prompt-storage.py  6-nildb-stored-prompt.py  7-web-search.py  config.py
clients/nilai-py/src/nilai_py/: __init__.py  client.py  common.py  niltypes.py  server.py
clients/nilai-py/src/nilai_py/nildb/: __init__.py  config.py  document.py  models.py  user.py
clients/nilai-py/tests/e2e/: __init__.py  test_e2e.py
clients/nilai-py/tests/unit/: test_server.py
docker/: vllm.Dockerfile
docker/compose/: docker-compose.deepseek-14b-gpu.yml  docker-compose.gemma-27b-gpu.yml  docker-compose.gemma-4b-gpu.ci.yml  docker-compose.gpt-120b-gpu.yml  docker-compose.gpt-20b-gpu.yml  docker-compose.llama-1b-cpu.yml  docker-compose.llama-1b-gpu.ci.yml  docker-compose.llama-1b-gpu.yml  docker-compose.llama-3b-gpu.yml  docker-compose.llama-70b-gpu.yml  docker-compose.llama-8b-gpu.yml  docker-compose.lmstudio.yml  docker-compose.nilai-prod-1.yml  docker-compose.nilai-prod-2.yml  docker-compose.qwen-2b-gpu.ci.yml
grafana/runtime-data/dashboards/: nuc-query-data.json  query-data.json  testnet-nuc-query-data.json  totals-data.json  usage-data.json
nilai-api/: gunicorn.conf.py  pyproject.toml
nilai-api/alembic/: env.py
nilai-api/alembic/versions/: 0ba073468afc_chore_improved_database_schema.py  43b23c73035b_fix_userid_change_to_user_id.py  597f5c4be67e_feat_websearch_rate_limits.py  9ddf28cf6b6f_feat_new_user_config_and_web_rate_limits.py  b9642f45db1d_fix_changed_to_timestamps_with_timezone.py  ca76e3ebe6ee_fix_remove_mail_and_adjust_field_lengths.py  da89d3230653_create_initial_set_of_tables.py
nilai-api/src/nilai_api/: __main__.py  app.py  credit.py  crypto.py  rate_limiting.py  state.py
nilai-api/src/nilai_api/attestation/: __init__.py
nilai-api/src/nilai_api/auth/: __init__.py  common.py  nuc.py  strategies.py
nilai-api/src/nilai_api/auth/nuc_helpers/: __init__.py  helpers.py  main.py  nildb_document.py  types.py  usage.py
nilai-api/src/nilai_api/commands/: add_user.py
nilai-api/src/nilai_api/config/: __init__.py  __main__.py  auth.py  database.py  environment.py  nildb.py  rate_limiting.py  utils.py  web_search.py
nilai-api/src/nilai_api/db/: __init__.py  logs.py  users.py
nilai-api/src/nilai_api/handlers/: nilrag.py  web_search.py
nilai-api/src/nilai_api/handlers/nildb/: api_model.py  handler.py
nilai-api/src/nilai_api/handlers/tools/: code_execution.py  tool_router.py
nilai-api/src/nilai_api/middleware/: __init__.py  security.py
nilai-api/src/nilai_api/routers/: private.py  public.py
nilai-api/src/nilai_api/validation/: __init__.py
nilai-models/src/nilai_models/: daemon.py  lmstudio_announcer.py
scripts/: credit-init.sql  docker-composer.py
tests/: conftest.py
tests/benchmarks/: __init__.py  test_endpoint_performance.py  test_validation_performance.py
tests/e2e/: config.py  nuc.py  test_code_execution.py  test_http.py  test_openai.py
tests/functional_tests/: test_tools.py
tests/integration/: conftest.py
tests/integration/nilai_api/: test_users_db_integration.py
tests/unit/: __init__.py
tests/unit/nilai-common/: conftest.py  test_api_model.py  test_discovery.py
tests/unit/nilai_api/: __init__.py  conftest.py  test_cryptography.py  test_db.py  test_rate_limiting.py  test_state.py  test_web_search.py
tests/unit/nilai_api/auth/: test_auth.py  test_nuc.py  test_strategies.py
tests/unit/nilai_api/handlers/: test_nildb_handler.py
tests/unit/nilai_api/handlers/tools/: test_tool_router.py
tests/unit/nilai_api/routers/: test_nildb_endpoints.py  test_private.py  test_public.py
tests/unit/nuc_helpers/: __init__.py  test_nildb_document.py  test_usage.py
