[project]
name = "nilai"
version = "0.1.0"
description = ""
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" },
    { name = "Baptiste Lefort", email = "baptiste.lefort@nillion.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nilai-api",
    "nilai-common",
    "nilai-models",
    "nilai-py",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.11.7",
    "uvicorn>=0.32.1",
    "pytest-asyncio>=1.2.0",
    "testcontainers>=4.13.0",
    "pyright>=1.1.406",
    "pre-commit>=4.1.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["nilai"] }

[tool.uv.workspace]
members = ["nilai-models", "nilai-api", "packages/nilai-common", "clients/nilai-py"]

[tool.uv.sources]
nilai-common = { workspace = true }
nilai-api = { workspace = true }
nilai-models = { workspace = true }
nilai-py = { workspace = true }

[tool.pyright]
exclude = ["**/.venv", "**/.venv/**"]

[tool.ruff]
exclude = ["**/.venv", "**/.venv/**"]
