[project]
name = "nilai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "José Cabrero-Holgueras", email = "jose.cabrero@nillion.com" },
    { name = "Baptiste Lefort", email = "baptiste.lefort@nillion.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "alembic>=1.14.1",
    "cryptography>=43.0.1",
    "fastapi[standard]>=0.115.5",
    "gunicorn>=23.0.0",
    "nilai-common",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "httpx>=0.27.2",
    "nilrag>=0.1.11",
    "openai>=1.59.9",
    "pg8000>=1.31.2",
    "prometheus_fastapi_instrumentator>=7.0.2",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "redis>=5.2.1",
    "authlib>=1.4.1",
    "verifier",
    "web3>=7.8.0",
    "click>=8.1.8",
    "nuc>=0.1.0",
    "pyyaml>=6.0.1",
    "trafilatura>=1.7.0",
    "secretvaults",
    "e2b-code-interpreter>=1.0.3",
    "nilauth-credit-middleware>=0.1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nilai-common = { workspace = true }

# TODO: Remove this once the secretvaults package is released with the fix
secretvaults = { git = "https://github.com/jcabrero/secretvaults-py", rev = "main" }
